order process save customer and order data

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -457,6 +457,9 @@ table .absorbing-column {
 	border-color: #cccccc;
 }
 
+.error-messages{
+	color: #ae0000;
+}
 /* ODER SUMMARY BOX */
 
 .summary-box h4 {
